kubernetes/by-cluster/red-squadron-talos/system/applications/by-namespace/envoy-gateway-system/envoy-gateway/resources/gatewayclass.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: default
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
