kubernetes/by-cluster/red-squadron-talos/system/applications/by-namespace/envoy-gateway-system/envoy-gateway/resources/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: default
spec:
  gatewayClassName: default
  addresses:
  - type: IPAddress
    value: "172.28.5.0"
  listeners:
  - name: http
    protocol: HTTP
    port: 80
    allowedRoutes:
      namespaces:
        from: All
